net and vis activated. net has been refactored, Windows Sockets removed, does not function. vis executable should function sans the net component

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required (VERSION 2.6)
 project (DSF)
 
-FIND_PACKAGE( Boost 1.56 COMPONENTS program_options REQUIRED)
+FIND_PACKAGE( Boost 1.56 COMPONENTS program_options system REQUIRED)
+FIND_PACKAGE(OpenSceneGraph 2.0.0 REQUIRED osgDB osgUtil)
 
 INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
+INCLUDE_DIRECTORIES(${OPENSCENEGRAPH_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(DSF)
 
 #SET(CMAKE_BUILD_TYPE RelWithDebInfo) # release build with debug symbols
@@ -11,8 +13,8 @@ SET(CMAKE_BUILD_TYPE Debug)
 
 # TODO need to make Net platform agnostic
 add_subdirectory(DSF/sim)
-#add_subdirectory(DSV/net)
-#add_subdirectory(DSF/vis)
+add_subdirectory(DSF/net)
+add_subdirectory(DSF/vis)
 add_subdirectory(DSF/util)
 
 # Add examples
@@ -24,6 +26,8 @@ add_subdirectory(examples/dynamic)		# Dynamic DSF executable (loads any shared o
 ADD_LIBRARY( DSF SHARED
   DSF/sim/integratorRK4.cpp
   DSF/sim/sim.cpp
+  DSF/net/NetClient.cpp
+  DSF/net/NetServer.cpp
   DSF/util/math/mat3.cpp
   DSF/util/math/vec3.cpp
   DSF/util/tbl/tbl.cpp
@@ -44,6 +48,9 @@ SET_TARGET_PROPERTIES(DSF PROPERTIES LINKER_LANGUAGE C)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive")
 #SET_TARGET_PROPERTIES(DSF PROPERTIES LINKER_LANGUAGE C)
 
+# TODO: once you make a Vis target,
+#add_executable(foo foo.cc)
+#target_link_libraries(foo ${OPENSCENEGRAPH_LIBRARIES})
 
 # Generate documentation
 FIND_PACKAGE(Doxygen)
