vis working with files in the /vis/ directory. There is a disconnect in the XML format for vis and the current XML files in the sixdof examples. Also, net is still inactive

--- a/DSF/vis/CMakeLists.txt
+++ b/DSF/vis/CMakeLists.txt
@@ -26,9 +26,10 @@ ADD_EXECUTABLE(vis ${vis_source_files})
 SET_TARGET_PROPERTIES(vis PROPERTIES LINKER_LANGUAGE C)
 TARGET_INCLUDE_DIRECTORIES(vis PRIVATE /usr/include/fox-1.6)
 TARGET_LINK_LIBRARIES(vis DSF dl ${Boost_LIBRARIES} ${OPENSCENEGRAPH_LIBRARIES} -L/usr/lib/x86_64-linux-gnu/ -lFOX-1.6)
-# set(RUNTIME_OUTPUT_DIRECTORY ../../)
 
 set(CMAKE_CXX_FLAGS "-fpermissive")
 
-#add_library(vis ${vis_source_files})
-#SET_TARGET_PROPERTIES(vis PROPERTIES LINKER_LANGUAGE C)
+CONFIGURE_FILE(bullet.osg bullet.osg COPYONLY)
+CONFIGURE_FILE(wgs84sphere.osg wgs84sphere.osg COPYONLY)
+CONFIGURE_FILE(visualize40s.csv visualize40s.csv COPYONLY)
+CONFIGURE_FILE(vehicle_test.xml vehicle_test.xml COPYONLY)
