vis is working with example vehicle file and assets. Net does not work.

--- a/DSF/vis/CMakeLists.txt
+++ b/DSF/vis/CMakeLists.txt
@@ -32,4 +32,4 @@ set(CMAKE_CXX_FLAGS "-fpermissive")
 CONFIGURE_FILE(bullet.osg bullet.osg COPYONLY)
 CONFIGURE_FILE(wgs84sphere.osg wgs84sphere.osg COPYONLY)
 CONFIGURE_FILE(visualize40s.csv visualize40s.csv COPYONLY)
-CONFIGURE_FILE(vehicle_test.xml vehicle_test.xml COPYONLY)
+CONFIGURE_FILE(vehicle.xml vehicle.xml COPYONLY)
