removing errant upload

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,9 +20,8 @@ add_subdirectory(DSF/util)
 # Add examples
 add_subdirectory(examples/dynamic)              # Dynamic DSF executable (loads any shared object library)
 add_subdirectory(examples/bouncy)
-#add_subdirectory(examples/cannonball)
-#add_subdirectory(examples/sixdof)		# 6DOF Library (shared object)
-#add_subdirectory(examples/static)		# Staticly compiled 6DOF executable
+add_subdirectory(examples/sixdof)		# 6DOF Library (shared object)
+add_subdirectory(examples/static)		# Staticly compiled 6DOF executable
 
 # Create DSF library
 ADD_LIBRARY( DSF SHARED
